--- a/package.json
+++ b/package.json
@@ -27,10 +27,9 @@
     "pdfkit": "^0.15.0",
     "ejs": "^3.1.10",
     "mathjs": "^13.2.2",
-    "gpt4all": "^2.8.0",
-    "llama-node": "^0.1.8",
-    "langchain": "^0.2.13",
-    "onnxruntime-node": "^1.19.2"
+    "gpt4all": "4.0.0",
+    "llama-node": "0.1.6",
+    "node-llama-cpp": "3.12.1"
   },
   "engines": {
     "node": "22.x"
