--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "tevona-api",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "node index.js",
