--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "node-fetch": "^3.3.2",
     "ytdl-core": "^4.11.5",
-    "yt-search": "^2.10.4",
     "yt-dlp-wrap": "^2.3.12",
+    "yt-search": "^2.10.4",
     "yt-stream": "^1.2.2",
-    "ytsr": "^3.8.4",
-    "axios": "^1.6.7"
+    "ytsr": "^3.8.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
   }
-  }
+}
