--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "tevona-api",
   "version": "1.0.0",
   "description": "Music search and downloader API",
-  "main": "server.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "axios": "^1.6.7",
