--- a/package.json
+++ b/package.json
@@ -1,25 +1,17 @@
 {
   "name": "tevona-api",
   "version": "1.0.0",
-  "description": "Music search and streaming API",
+  "description": "YouTube search and downloader backend API",
   "main": "index.js",
-  "type": "commonjs",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "axios": "^1.6.7",
+    "axios": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-rate-limit": "^7.0.0",
-    "fluent-ffmpeg": "^2.1.2",
-    "helmet": "^7.0.0",
-    "morgan": "^1.10.0",
-    "music-metadata": "^7.14.0",
-    "ytdl-core": "^4.11.5",
-    "yt-dlp-wrap": "^2.3.12"
+    "express": "^4.19.2",
+    "yt-search": "^2.10.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
@@ -27,6 +19,6 @@
   "engines": {
     "node": ">=18 <=20"
   },
-  "author": "Tevona Dev Team",
+  "author": "Wanga",
   "license": "MIT"
 }
