--- a/package.json
+++ b/package.json
@@ -1,29 +1,26 @@
 {
-  "name": "yt-downloader-backend",
+  "name": "tevona-api",
   "version": "1.0.0",
-  "description": "YouTube music downloader / search (ytdl-core + ffmpeg-static + id3)",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "axios": "^1.7.4",
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "ffmpeg-static": "^5.1.0",
-    "fluent-ffmpeg": "^2.1.2",
-    "mkdirp": "^3.0.1",
-    "node-id3": "^0.2.0",
-    "node-youtube-music": "^1.0.8",
-    "ytdl-core": "^4.11.0",
-    "youtube-yts": "^2.1.5",
-    "morgan": "^1.10.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.0"
+    "axios": "1.7.4",
+    "cors": "2.8.5",
+    "express": "4.19.2",
+    "ffmpeg-static": "5.1.0",
+    "fluent-ffmpeg": "2.1.2",
+    "mkdirp": "3.0.1",
+    "morgan": "1.10.0",
+    "node-id3": "0.2.0",
+    "ytdl-core": "4.11.0",
+    "youtube-yts": "2.1.5",
+    "node-youtube-music": "github:play-dl/node-youtube-music"
   },
   "engines": {
-    "node": ">=18 <=20"
+    "node": "20.x"
   }
 }
