--- a/package.json
+++ b/package.json
@@ -1,27 +1,15 @@
 {
   "name": "tevona-api",
   "version": "1.0.0",
+  "description": "YouTube downloader & stream API powered by yt-dlp",
   "main": "index.js",
-  "type": "commonjs",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node index.js"
   },
   "dependencies": {
-    "axios": "1.7.4",
-    "cors": "2.8.5",
-    "dotenv": "16.3.1",
-    "express": "4.19.2",
-    "ffmpeg-static": "5.1.0",
-    "fluent-ffmpeg": "2.1.2",
-    "mkdirp": "3.0.1",
-    "morgan": "1.10.0",
-    "node-id3": "0.2.3",
-    "ytdl-core": "4.11.5",
-    "youtube-yts": "2.0.0",
-    "node-youtube-music": "0.8.3"
-  },
-  "engines": {
-    "node": "22.x"
+    "express": "^4.19.2",
+    "cors": "^2.8.5",
+    "morgan": "^1.10.0",
+    "body-parser": "^1.20.2"
   }
-}
+  }
