--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
     "express": "^4.19.2",
     "cors": "^2.8.5",
     "morgan": "^1.10.0",
-    "body-parser": "^1.20.2"
+    "yt-dlp-exec": "^2.1.3"
   }
-  }
+}
