--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
     "express": "^4.19.2",
     "cors": "^2.8.5",
     "morgan": "^1.10.0",
-    "yt-dlp-exec": "^2.0.7"
+    "youtube-dl-exec": "^3.0.24"
   }
 }
