--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tevona-api",
+  "name": "ytmp4-downloader",
   "version": "1.0.0",
-  "description": "YouTube downloader & stream API powered by yt-dlp",
+  "description": "YouTube to MP4 API using Puppeteer",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -10,6 +10,6 @@
     "express": "^4.19.2",
     "cors": "^2.8.5",
     "morgan": "^1.10.0",
-    "youtube-dl-exec": "^3.0.24"
+    "puppeteer": "^22.15.0"
   }
 }
